fixed photo stretching

--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -48,12 +48,20 @@ th {
 .profile-image-square {
     width: 230px;
     height: 230px;
+    position: relative;
+    overflow: hidden;
     // box-sizing: border-box;
     // border: 3px solid white;
     // box-shadow: 0 0 0 2px rgba(0,0,0,.15);
     margin-right: 30px;
     margin-bottom: 30px;
 
+}
+
+.profile-image-square-img {
+    width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .photos {
